# webscope

./: .env.backend.template  .env.frontend.template  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/core/: api.py  asgi.py  enums.py  models.py  permissions.py  serializers.py  settings.py  urls.py
backend/src/core/management/commands/: create_user.py
backend/src/core/migrations/: 0001_initial.py
backend/src/core/tests/: test.py
frontend/: .prettierignore  .prettierrc.cjs  Dockerfile  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: auth-options.ts  route.ts
frontend/app/login/: page.tsx
frontend/components/: conversation.tsx  conversations.tsx
frontend/components/login/: auth-button.tsx  form.tsx
frontend/components/ui/: button.tsx  card.tsx  form.tsx  spinner.tsx
frontend/lib/: auth.ts  fetch.ts
frontend/lib/providers/: auth-provider.tsx  query-provider.tsx
frontend/types/: global.ts  next-auth.d.ts
